k8s/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-hub
spec:
  replicas: 10
  selector:
    matchLabels:
      app: selenium-hub
  template:
    metadata:
      labels:
        app: selenium-hub
    spec:
      containers:
      - name: selenium-hub
        image: seleniarm/standalone-chromium:4.18.0
        ports:
        - containerPort: 4444
---
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub
spec:
  ports:
  - port: 4444
    targetPort: 4444
  selector:
    app: selenium-hub
