k8s/hub-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selenium-ingress
spec:
  rules:
  - host: playwright-selenium.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: selenium-srv
            port:
              number: 4444
